--- a/LibrarySystem/backend/pom.xml
+++ b/LibrarySystem/backend/pom.xml
@@ -19,5 +19,10 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.pvt.jd2.project.common</groupId>
+      <artifactId>common</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
