--- a/LibrarySystem/frontend/pom.xml
+++ b/LibrarySystem/frontend/pom.xml
@@ -21,10 +21,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-        <groupId>com.pvt.jd2.project.back</groupId>
-        <artifactId>backend</artifactId>
+        <groupId>com.pvt.jd2.project.common</groupId>
+        <artifactId>common</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <scope>provided</scope>
     </dependency>
   </dependencies>
   <build>
