service, doa, domain objects and interfaces

--- a/LibrarySystem/pom.xml
+++ b/LibrarySystem/pom.xml
@@ -19,5 +19,6 @@
     <module>backend</module>
     <module>frontend</module>
     <module>common</module>
+      <module>common</module>
   </modules>
 </project>
