--- a/LibrarySystem/frontend/pom.xml
+++ b/LibrarySystem/frontend/pom.xml
@@ -21,9 +21,34 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-        <groupId>com.pvt.jd2.project.common</groupId>
-        <artifactId>common</artifactId>
-        <version>1.0-SNAPSHOT</version>
+      <groupId>com.pvt.jd2.project.common</groupId>
+      <artifactId>common</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>com.pvt.jd2.project.back</groupId>
+      <artifactId>backend</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring</artifactId>
+      <version>2.5.6</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+      <version>2.5.6</version>
+    </dependency>
+    <dependency>
+      <groupId>jstl</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.21</version>
     </dependency>
   </dependencies>
   <build>
