--- a/LibrarySystem/backend/pom.xml
+++ b/LibrarySystem/backend/pom.xml
@@ -30,9 +30,14 @@
       <version>4.2.2.Final</version>
     </dependency>
     <dependency>
+      <groupId>commons-dbcp</groupId>
+      <artifactId>commons-dbcp</artifactId>
+      <version>1.4</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
-      <version>4.0.0.RELEASE</version>
+      <version>3.2.3.RELEASE</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
